prevent wooshy smushy scrolling on iOS, fixes #432

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -13,6 +13,7 @@ html, body {
     margin           : 0;
     padding          : 0;
     background-color : @secondary-color;
+    position         : fixed;
 }
 
 @import "./clearfix.less";
